--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,6 +33,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest tests/
-    # - name: Train model
-    #   run: |
-    #     python main_pipeline.py
+    - name: Train model
+      run: |
+        python main_pipeline.py
