--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,9 +30,16 @@ jobs:
       run: |
         pip install flake8
         flake8 src 
-    - name: Test with pytest
+    - name: Run tests
       run: |
-        pytest tests/
+        pytest tests/ --junitxml=reports/test-report.xml
+
+    - name: Upload test report
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-report
+        path: reports/test-report.xml
+
     - name: Train model
       run: |
         python main_pipeline.py
