--- a/k8s/monitoring/prometheus-config.yml
+++ b/k8s/monitoring/prometheus-config.yml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
+  labels:
+    app.kubernetes.io/name: prometheus
+    app.kubernetes.io/component: monitoring
+    app.kubernetes.io/part-of: heart-disease-prediction
 data:
   prometheus.yml: |
     global:
