--- a/k8s/common/ingress.yml
+++ b/k8s/common/ingress.yml
@@ -2,6 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: heart-disease-ingress
+  labels:
+    app.kubernetes.io/name: heart-disease-gateway
+    app.kubernetes.io/part-of: heart-disease-prediction
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
