--- a/k8s/frontend/deployment.yml
+++ b/k8s/frontend/deployment.yml
@@ -55,6 +55,8 @@ metadata:
     app.kubernetes.io/name: heart-disease-frontend
     app.kubernetes.io/component: frontend
     app.kubernetes.io/part-of: heart-disease-prediction
+  annotations:
+    service.beta.kubernetes.io/azure-dns-label-name: heart-disease-2024ab05112
 spec:
   type: LoadBalancer
   selector:
