--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Build and Deploy to AKS
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - 'docs/**'
   workflow_dispatch:
 
 env:
