--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - 'docs/**'
+      - 'README.md'
+      - 'SERVICE_ARCHITECTURE.md'
   workflow_dispatch:
 
 env:
