--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
       - 'docs/**'
       - 'README.md'
       - 'SERVICE_ARCHITECTURE.md'
+      - 'wiki_content/**'
   workflow_dispatch:
 
 env:
