--- a/k8s/common/ingress-services.yml
+++ b/k8s/common/ingress-services.yml
@@ -1,9 +1,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: heart-disease-unified-ingress
+  name: ingress-services
   labels:
-    app.kubernetes.io/name: unified-gateway
+    app.kubernetes.io/name: services-gateway
     app.kubernetes.io/part-of: heart-disease-prediction
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
@@ -38,11 +38,3 @@ spec:
             name: prometheus-service
             port:
               number: 9090
-      # Frontend (Root) - Catch All
-      - path: /()(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: heart-disease-frontend-service
-            port:
-              number: 30008
