--- a/k8s/common/ingress-backend.yml
+++ b/k8s/common/ingress-backend.yml
@@ -1,11 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: heart-disease-unified-ingress
+  name: ingress-backend
   labels:
-    app.kubernetes.io/name: unified-gateway
+    app.kubernetes.io/name: backend-gateway
     app.kubernetes.io/part-of: heart-disease-prediction
   annotations:
+    # Rewrite target uses Capture Group $2 from the paths below
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
@@ -38,11 +39,3 @@ spec:
             name: prometheus-service
             port:
               number: 9090
-      # 4. Frontend - Catch-All regex
-      - path: /()(.*)
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: heart-disease-frontend-service
-            port:
-              number: 30008
