--- a/k8s/common/ingress.yml
+++ b/k8s/common/ingress.yml
@@ -1,13 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-backend
+  name: heart-disease-unified-ingress
   labels:
-    app.kubernetes.io/name: backend-gateway
+    app.kubernetes.io/name: unified-gateway
     app.kubernetes.io/part-of: heart-disease-prediction
   annotations:
-    # Rewrite target uses Capture Group $2 from the paths below
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # Use standard Regex matching. NO REWRITE TARGET.
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
@@ -15,7 +14,7 @@ spec:
   - host: heart-disease-2024ab05112.centralindia.cloudapp.azure.com
     http:
       paths:
-      # 1. API - Matches /api or /api/...
+      # 1. API - Matches /api - Native Path
       - path: /api(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
@@ -23,7 +22,7 @@ spec:
             name: heart-disease-service
             port:
               number: 80
-      # 2. Grafana - Matches /grafana or /grafana/...
+      # 2. Grafana - Matches /grafana - Native Path
       - path: /grafana(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
@@ -31,7 +30,7 @@ spec:
             name: grafana
             port:
               number: 3000
-      # 3. Prometheus - Matches /prometheus or /prometheus/...
+      # 3. Prometheus - Matches /prometheus - Native Path
       - path: /prometheus(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
@@ -39,3 +38,11 @@ spec:
             name: prometheus-service
             port:
               number: 9090
+      # 4. Frontend - Matches Root
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: heart-disease-frontend-service
+            port:
+              number: 30008
