--- a/k8s/backend/service.yml
+++ b/k8s/backend/service.yml
@@ -15,5 +15,5 @@ spec:
     - name: http
       protocol: TCP
       port: 80
-      targetPort: http
+      targetPort: 8000
       nodePort: 30007
