--- a/k8s/backend/deployment.yml
+++ b/k8s/backend/deployment.yml
@@ -38,13 +38,13 @@ spec:
               memory: "512Mi"
           livenessProbe:
             httpGet:
-              path: /api/
+              path: /health
               port: http
-            initialDelaySeconds: 10
+            initialDelaySeconds: 30
             periodSeconds: 15
           readinessProbe:
             httpGet:
-              path: /api/
+              path: /health
               port: http
-            initialDelaySeconds: 10
+            initialDelaySeconds: 30
             periodSeconds: 15
