--- a/k8s/monitoring/prometheus-config.yml
+++ b/k8s/monitoring/prometheus-config.yml
@@ -13,7 +13,7 @@ data:
 
     scrape_configs:
       - job_name: "heart-disease-api"
-        metrics_path: /metrics
+        metrics_path: /api/metrics
         static_configs:
           - targets:
               - heart-disease-service:80
