--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,40 @@ jobs:
               - 'k8s/**'
               - '.github/workflows/**'
 
+  unit-test:
+    needs: check-changes
+    if: needs.check-changes.outputs.backend == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        working-directory: ./backend
+        run: |
+          pip install -r requirements.txt
+          pip install flake8 httpx pytest
+      - name: Lint with flake8
+        working-directory: ./backend
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 src . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 src . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run tests
+        working-directory: ./backend
+        run: |
+          pytest tests/ --junitxml=test-report.xml
+      - name: Upload test report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: backend/test-report.xml
+
+
   build-and-push:
     needs: check-changes
     if: ${{ needs.check-changes.outputs.backend == 'true' || needs.check-changes.outputs.frontend == 'true' }}
@@ -72,11 +106,12 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [check-changes, build-and-push]
+    needs: [check-changes, build-and-push, unit-test]
     if: |
       always() &&
       (needs.check-changes.result == 'success') &&
       (needs.build-and-push.result == 'success' || needs.build-and-push.result == 'skipped') &&
+      (needs.unit-test.result == 'success' || needs.unit-test.result == 'skipped') &&
       (needs.check-changes.outputs.k8s == 'true' || needs.check-changes.outputs.backend == 'true' || needs.check-changes.outputs.frontend == 'true')
     steps:
       - name: Checkout code
