FIXED: Fixe the proxy URL

--- a/k8s/monitoring/grafana-deployment.yml
+++ b/k8s/monitoring/grafana-deployment.yml
@@ -28,8 +28,14 @@ spec:
               protocol: TCP
           env:
             - name: GF_SERVER_ROOT_URL
-              value: "https://heart-disease-2024ab05112.centralindia.cloudapp.azure.com/grafana/"
+              value: "http://heart-disease-2024ab05112.centralindia.cloudapp.azure.com/grafana/"
             - name: GF_SERVER_SERVE_FROM_SUB_PATH
+              value: "true"
+            - name: GF_SECURITY_COOKIE_SECURE
+              value: "false"
+            - name: GF_SECURITY_COOKIE_SAMESITE
+              value: "lax"
+            - name: GF_SECURITY_ALLOW_EMBEDDING
               value: "true"
           resources:
             requests:
