Fix Grafana login and metrics: Update proxy headers, cookie handling, and Prometheus datasource URL

--- a/k8s/monitoring/grafana-deployment.yml
+++ b/k8s/monitoring/grafana-deployment.yml
@@ -37,6 +37,8 @@ spec:
               value: "lax"
             - name: GF_SECURITY_ALLOW_EMBEDDING
               value: "true"
+            - name: GF_SECURITY_CSRF_ADDITIONAL_DOMAINS
+              value: "heart-disease-2024ab05112.centralindia.cloudapp.azure.com"
           resources:
             requests:
               cpu: "100m"
