--- a/k8s/monitoring/grafana-config.yml
+++ b/k8s/monitoring/grafana-config.yml
@@ -11,7 +11,7 @@ data:
     datasources:
       - name: Prometheus
         type: prometheus
-        url: http://prometheus:9090
+        url: http://prometheus:9090/prometheus
         access: proxy
         isDefault: true
   dashboards.yml: |
