--- a/k8s/monitoring/grafana-deployment.yml
+++ b/k8s/monitoring/grafana-deployment.yml
@@ -31,6 +31,10 @@ spec:
               value: "http://heart-disease-2024ab05112.centralindia.cloudapp.azure.com/grafana/"
             - name: GF_SERVER_SERVE_FROM_SUB_PATH
               value: "true"
+            - name: GF_SERVER_DOMAIN
+              value: "heart-disease-2024ab05112.centralindia.cloudapp.azure.com"
+            - name: GF_SERVER_TRUST_PROXY_HEADERS
+              value: "true"
             - name: GF_SECURITY_COOKIE_SECURE
               value: "false"
             - name: GF_SECURITY_COOKIE_SAMESITE
@@ -43,6 +47,8 @@ spec:
               value: "false"
             - name: GF_SESSION_LIFE_TIME
               value: "86400"
+            - name: GF_ANALYTICS_REPORTING_ENABLED
+              value: "false"
           resources:
             requests:
               cpu: "100m"
