--- a/k8s/monitoring/grafana-service.yml
+++ b/k8s/monitoring/grafana-service.yml
@@ -6,14 +6,16 @@ metadata:
     app.kubernetes.io/name: grafana
     app.kubernetes.io/component: monitoring
     app.kubernetes.io/part-of: heart-disease-prediction
+  annotations:
+    service.beta.kubernetes.io/azure-dns-label-name: heart-disease-grafana-2024ab05112
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app.kubernetes.io/name: grafana
     app.kubernetes.io/component: monitoring
   ports:
     - name: http
-      port: 3000
-      targetPort: http
-      nodePort: 30300
+      port: 80
+      targetPort: 3000
+      nodePort: 30000
       protocol: TCP
