--- a/k8s/monitoring/prometheus-deployment.yml
+++ b/k8s/monitoring/prometheus-deployment.yml
@@ -25,7 +25,6 @@ spec:
           args:
             - "--config.file=/etc/prometheus/prometheus.yml"
             - "--storage.tsdb.path=/prometheus/"
-            - "--web.external-url=/prometheus/"
           ports:
             - name: http
               containerPort: 9090
@@ -42,13 +41,13 @@ spec:
               memory: "512Mi"
           livenessProbe:
             httpGet:
-              path: /prometheus/-/healthy
+              path: /-/healthy
               port: http
             initialDelaySeconds: 30
             periodSeconds: 30
           readinessProbe:
             httpGet:
-              path: /prometheus/-/ready
+              path: /-/ready
               port: http
             initialDelaySeconds: 30
             periodSeconds: 30
