Unified Ingress Setup: Optimized for Azure Student 3-IP limit

--- a/k8s/frontend/frontend-deployment.yml
+++ b/k8s/frontend/frontend-deployment.yml
@@ -58,7 +58,7 @@ metadata:
   annotations:
     service.beta.kubernetes.io/azure-dns-label-name: heart-disease-2024ab05112
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app.kubernetes.io/name: heart-disease-frontend
     app.kubernetes.io/component: frontend
