--- a/k8s/monitoring/prometheus-service.yml
+++ b/k8s/monitoring/prometheus-service.yml
@@ -6,16 +6,14 @@ metadata:
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: monitoring
     app.kubernetes.io/part-of: heart-disease-prediction
-  annotations:
-    service.beta.kubernetes.io/azure-dns-label-name: heart-disease-prom-2024ab05112
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: monitoring
   ports:
     - name: http
-      port: 80
+      port: 9090
       targetPort: 9090
       nodePort: 30090
       protocol: TCP
