--- a/k8s/backend/backend-service.yml
+++ b/k8s/backend/backend-service.yml
@@ -6,10 +6,8 @@ metadata:
     app.kubernetes.io/name: heart-disease-api
     app.kubernetes.io/component: backend
     app.kubernetes.io/part-of: heart-disease-prediction
-  annotations:
-    service.beta.kubernetes.io/azure-dns-label-name: heart-disease-api-2024ab05112
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app.kubernetes.io/name: heart-disease-api
     app.kubernetes.io/component: backend
