--- a/k8s/monitoring/grafana-deployment.yml
+++ b/k8s/monitoring/grafana-deployment.yml
@@ -28,9 +28,9 @@ spec:
               protocol: TCP
           env:
             - name: GF_SERVER_ROOT_URL
-              value: "http://heart-disease-grafana-2024ab05112.centralindia.cloudapp.azure.com/"
+              value: "http://heart-disease-2024ab05112.centralindia.cloudapp.azure.com/grafana/"
             - name: GF_SERVER_SERVE_FROM_SUB_PATH
-              value: "false"
+              value: "true"
             - name: GF_SECURITY_COOKIE_SECURE
               value: "false"
             - name: GF_SECURITY_ALLOW_EMBEDDING
