--- a/k8s/monitoring/grafana-service.yml
+++ b/k8s/monitoring/grafana-service.yml
@@ -9,13 +9,13 @@ metadata:
   annotations:
     service.beta.kubernetes.io/azure-dns-label-name: heart-disease-grafana-2024ab05112
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app.kubernetes.io/name: grafana
     app.kubernetes.io/component: monitoring
   ports:
     - name: http
-      port: 80
+      port: 3000
       targetPort: 3000
       nodePort: 30000
       protocol: TCP
