--- a/k8s/monitoring/prometheus-deployment.yml
+++ b/k8s/monitoring/prometheus-deployment.yml
@@ -25,6 +25,7 @@ spec:
           args:
             - "--config.file=/etc/prometheus/prometheus.yml"
             - "--storage.tsdb.path=/prometheus/"
+            - "--web.external-url=/prometheus/"
           ports:
             - name: http
               containerPort: 9090
@@ -41,13 +42,13 @@ spec:
               memory: "512Mi"
           livenessProbe:
             httpGet:
-              path: /-/healthy
+              path: /prometheus/-/healthy
               port: http
             initialDelaySeconds: 30
             periodSeconds: 30
           readinessProbe:
             httpGet:
-              path: /-/ready
+              path: /prometheus/-/ready
               port: http
             initialDelaySeconds: 30
             periodSeconds: 30
