--- a/k8s/common/ingress.yml
+++ b/k8s/common/ingress.yml
@@ -6,20 +6,23 @@ metadata:
     app.kubernetes.io/name: unified-gateway
     app.kubernetes.io/part-of: heart-disease-prediction
   annotations:
+    # Use Nginx Ingress
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
+    # Essential for path routing
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    # Important for Grafana cookies and session
-    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    # Stabilize Grafana Sessions
+    nginx.ingress.kubernetes.io/proxy-cookie-path: "/ /"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
 spec:
   rules:
   - host: heart-disease-2024ab05112.centralindia.cloudapp.azure.com
     http:
       paths:
-      # Grafana
+      # 📈 Grafana Monitoring
       - path: /grafana/?(.*)
         pathType: ImplementationSpecific
         backend:
@@ -27,7 +30,7 @@ spec:
             name: grafana
             port:
               number: 3000
-      # Prometheus
+      # 🔍 Prometheus Metrics
       - path: /prometheus/?(.*)
         pathType: ImplementationSpecific
         backend:
@@ -35,7 +38,7 @@ spec:
             name: prometheus
             port:
               number: 9090
-      # API
+      # 🚀 Backend API (Swagger UI)
       - path: /api/?(.*)
         pathType: ImplementationSpecific
         backend:
@@ -43,7 +46,7 @@ spec:
             name: heart-disease-service
             port:
               number: 80
-      # Frontend (Root) - Catch everything else
+      # 🏠 Frontend (Root)
       - path: /(.*)
         pathType: ImplementationSpecific
         backend:
