--- a/k8s/common/ingress.yml
+++ b/k8s/common/ingress.yml
@@ -6,17 +6,15 @@ metadata:
     app.kubernetes.io/name: unified-gateway
     app.kubernetes.io/part-of: heart-disease-prediction
   annotations:
-    # Use Nginx Ingress
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
-    # Essential for path routing
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    # Stabilize Grafana Sessions
-    nginx.ingress.kubernetes.io/proxy-cookie-path: "/ /"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+    # Increase proxy timeouts for stability
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
 spec:
   rules:
   - host: heart-disease-2024ab05112.centralindia.cloudapp.azure.com
