--- a/k8s/common/ingress.yml
+++ b/k8s/common/ingress.yml
@@ -9,44 +9,42 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    # Increase proxy timeouts for stability
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
+    # Essential for Prometheus/Grafana subpaths
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
 spec:
   rules:
   - host: heart-disease-2024ab05112.centralindia.cloudapp.azure.com
     http:
       paths:
       # Grafana Monitoring
-      - path: /grafana/?(.*)
-        pathType: ImplementationSpecific
+      - path: /grafana
+        pathType: Prefix
         backend:
           service:
             name: grafana
             port:
               number: 3000
       # Prometheus Metrics
-      - path: /prometheus/?(.*)
-        pathType: ImplementationSpecific
+      - path: /prometheus
+        pathType: Prefix
         backend:
           service:
             name: prometheus
             port:
               number: 9090
-      # Backend API (Swagger UI)
-      - path: /api/?(.*)
-        pathType: ImplementationSpecific
+      # Backend API (FastAPI handles its own /api prefix)
+      - path: /api
+        pathType: Prefix
         backend:
           service:
             name: heart-disease-service
             port:
               number: 80
       # Frontend (Root)
-      - path: /(.*)
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: heart-disease-frontend-service
